# betta

./: .gitignore  Cargo.toml  README.md
src/client/: main.rs
src/core/: Cargo.toml
src/core/src/: command.rs  event.rs  lib.rs  utils.rs
src/core/src/error/: mod.rs
src/server/: database.rs  main.rs  player.rs  server.rs
